--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,8 +171,7 @@ content: "\f005";
 
 .free {
     font-size: 1.45em;
-    font-family: lobster;
-    text-transform: lowercase;
+    font-family: script;
 }
 
 .about-container {
