--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,7 +171,7 @@ content: "\f005";
 
 .free {
     font-size: 1.45em;
-    font-family: script;
+    font-family: 'Brush Script MT', cursive;
 }
 
 .about-container {
