--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,7 +171,7 @@ content: "\f005";
 
 .free {
     font-size: 1.45em;
-    font-family: cursive;
+    font-family: Impact, Haettenschweiler, 'Franklin Gothic Bold', Charcoal, 'Helvetica Inserat', 'Bitstream Vera Sans Bold', 'Arial Black', 'sans serif';
     font-variant: normal;
 }
 
